Fixing SoundCloud bugs. Only load the WebView if we are going to display the player.